feat: add 409 return when updating a new of an artist to an already existing artists name
